--- a/package.json
+++ b/package.json
@@ -41,9 +41,12 @@
     "@types/pdfjs-dist": "^2.7.4",
     "@types/react": "^16.4.0",
     "@types/react-dom": "^16.4.0",
+    "bootstrap": "^5.1.2",
     "lodash.debounce": "^4.0.8",
     "pdfjs-dist": "2.11.338",
-    "react-rnd": "^10.1.10"
+    "react-rnd": "^10.1.10",
+    "react-bootstrap": "^1.6.4",
+    "bootstrap": "^5.1.2",
   },
   "repository": {
     "type": "git",
