--- a/package.json
+++ b/package.json
@@ -46,8 +46,7 @@
     "lodash.debounce": "^4.0.8",
     "pdfjs-dist": "2.11.338",
     "react-rnd": "^10.1.10",
-    "react-bootstrap": "^1.6.4",
-    "bootstrap": "^5.1.2",
+    "react-bootstrap": "^1.6.4"
   },
   "repository": {
     "type": "git",
