--- a/package.json
+++ b/package.json
@@ -34,13 +34,11 @@
     "clean": "rm -rf dist"
   },
   "peerDependencies": {
-    "react": ">=16.4.0",
-    "react-dom": ">=16.4.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "dependencies": {
     "@types/lodash.debounce": "^4.0.6",
-    "@types/react": "^16.4.0",
-    "@types/react-dom": "^16.4.0",
     "bootstrap": "^5.1.2",
     "lodash.debounce": "^4.0.8",
     "pdfjs-dist": "^3.0.279",
@@ -55,6 +53,8 @@
     "url": "https://github.com/anttihil/react-pdf-highlighter-with-categories/issues"
   },
   "devDependencies": {
+    "@types/react": "^18.0.30",
+    "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "jest": "^27.1.0",
     "jest-puppeteer": "^6.1.0",
